[project]
name = "find-my-query"
version = "0.1.0"
description = "Find your query!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.1",
    "langfuse>=3.14.4",
    "openai>=2.21.0",
    "pandas>=2.3.3",
    "pinecone>=8.1.0",
    "sqlparse>=0.5.5",
    "streamlit>=1.54.0",
]
